busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-test
  namespace: demo-app
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
